
=======================================================
            WanT code:  Log of Changes 
=======================================================


05 Dec 2006      check on the 1D fft grid added in transport (ESSL were complainig);
                 fft_scalar.f90 module updated to account for 1D stuff; workaround
                 for xlf bug (namelist reading, see KnownBugs) added to test06 input files. (AF)

02 Dec 2006      postfix var added to transport namelist. prefix, postfix, workdir vars
                 added to input files for transport calculations in tests. run*.sh
                 scripts updated coherently. sumpdos.f90 tool added to utility/ . (AF)

30 Nov 2006      write_kdata variable added to INPUT_CONDUCTOR namelist: if set to 
                 .TRUE., kpoint-resolved dos and transmittance are written
                 on output data files. (BB)
                 BUILT_DATE is added to configure.ac and set in configure.h . (AF)

28 Nov 2006      Trial centers weight of the conditioned minimization added in 
                 summary.f90; prefix and work_dir added to INPUT_CONDUCTOR namelist. (BB)

24 Nov 2006      Check on the kpoints number used in the interpolation in transport 
                 calculations changed: it is possible to use fewer kpoints than those
                 in the DFT calculation; call to iotk added to read_matrix.f90 in 
                 transport: possibility of extracting the hamiltonian elements from a file
                 different from those in the input namelist. (BB)

19 Nov 2006      Slight fix in qexml_read_occ routine (qexml.f90). (AF)

17 Nov 2006      test10 made less computationally expensive. 
                 indexx.f90 removed since no longer used. (AF)

11 Nov 2006      configure fixed; internal lapack and atlas libs updated according to 
                 the philosophy of quantum-espresso. Few changes in blc2wan.f90 . (AF)
